--- a/Blog.ReactiveBehaviors.Declarative/LogInPageView.xaml
+++ b/Blog.ReactiveBehaviors.Declarative/LogInPageView.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="Blog.ReactiveBehaviors.Imperative.LogInPageView"
+<Window x:Class="Blog.ReactiveBehaviors.Declarative.LogInPageView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Width="400" Height="300">
 
